# yash

./: .Makefile.un~  .YaSH_stdinc.h.un~  .builtin.cpp.un~  .builtin.h.un~  .echo.cpp.un~  .emojikb.cpp.un~  .gitignore  .main.cpp.un~  .main.hs.un~  CMakeLists.txt  CMakePresets.json  Makefile  README.md  YaSH_x11.cpp  a.out  app  builtin.cpp  config.h  echo  echo.cpp  hrry  hrry.cpp  hrry.desktop  install.sh  io.cpp  jobs.cpp  linker.cpp  main.cpp  meson.build  out.debug  playground.cpp  scanner.cpp  shell.cpp  tokenizer.cpp  util.cpp
.build/: PKGBUILD
.builds/: PKGBUILD  hrry.install
.github/workflows/: makefile.yml
build_tools/: build_with_ninja.sh  clean_build.sh  make_tarball.sh
efck-chat-keyboard/: efck-chat-keyboard
include/: .YaSH_stdinc.h.un~  .builtin.h.un~  YaSH_stdinc.h  YaSH_x11.h  builtin.h  color.h  hrry_error_handler.h  hrry_stdinc.h  io.h  jobs.h  linker.h  shell.h  token.h  util.h  yungLog.h  yungTest.h
include/linux/: hrry_x11.h
man/: hrry  hrry_help.txt
share/fish/: README.md
share/info/: README.md
share/licenses/fish/: README.md
share/man/: README.md
src/: YaSH_x11.cpp  builtin.cpp  hrry.cpp  hrry_x11.cpp  io.cpp  jobs.cpp  linker.cpp  meson.build  shell.cpp  tokenizer.cpp  util.cpp
test/: main.cpp
yash/: Makefile  execve  execve.cpp  main.cpp  myecho  myecho.cpp  output  test.c
